Fix error message alignment on mobile

--- a/assets/variant-list.css
+++ b/assets/variant-list.css
@@ -411,6 +411,12 @@ variant-list-remove-button:hover .icon-remove {
   .variant-item__inner--no-media {
     display: none;
   }
+  
+  .variant-list-total__column {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
 }
 
 .variant-item__error-text+svg {
